--- a/main.html
+++ b/main.html
@@ -7,6 +7,32 @@
 </head>
 
 <body>
+	<h1>TIC TAC TOE</h1>
+	<form class="formPage">
+		<div class="playerNames">
+		<div class="playerlabel">
+			<label name="playerName" >Player 1</label>
+		<input type="text" placeholder="enter name" required>
+		</div>
+		<div class="playerlabel">
+			<label name="playerName" >Player 2</label>
+		<input type="text" placeholder="enter name" required>
+		</div>
+		</div>
+		<button class="btn">Start Game</button>
+	</form>
+
+	<div class="grid-container">
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
